--- a/style.css
+++ b/style.css
@@ -72,10 +72,11 @@ body * {
   left: 0;
   z-index: 1;
   transform: translateY(-50%);
+
+  animation: slide-back 0.2s;
 }
 .light #switch button {
-  right: 0;
-  left: initial;
+  animation: slide-in 0.2s forwards;
 }
 
 #switch span {
@@ -150,7 +151,23 @@ footer {
     --bg-url: url(./assets/bg-desktop.jpg);
   }
   .light{
-    --bg-url: url(./assets/bg-desktop-light.jgp);
+    --bg-url: url(./assets/bg-desktop-light.jpg);
   }
-  
+   /* animação do botão*/
+   @keyframes slide-in{
+    from {
+      left: 0;
+    }
+    to {
+      left: 50%;
+    }
+   }
+   @keyframes slide-back{
+    from {
+      left: 50%;
+    }
+    to {
+      left: 0%;
+    }
+   }
 }
