--- a/style.css
+++ b/style.css
@@ -67,10 +67,10 @@ body * {
   background: white var(--switch-bg-url) no-repeat center;
   border: 0;
   border-radius: 50%;
-
+  
+  left: 0;
   position: absolute;
   top: 50%;
-
   z-index: 1;
   transform: translateY(-50%);
 
